[gd_scene load_steps=9 format=3 uid="uid://i134isrh8srx"]

[ext_resource type="Script" path="res://source code/main.gd" id="1_aodvc"]
[ext_resource type="PackedScene" uid="uid://bjhebkbi2sx70" path="res://scenes/laure.tscn" id="2_4syor"]
[ext_resource type="PackedScene" uid="uid://bvp7ktqhfeper" path="res://scenes/environment.tscn" id="3_a4lbk"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_k065u"]
sky_horizon_color = Color(0.79625, 0.808598, 0.808088, 1)
sky_energy_multiplier = 0.0
ground_bottom_color = Color(0.8, 0.780392, 0.682353, 1)
ground_horizon_color = Color(0.79625, 0.808598, 0.808088, 1)

[sub_resource type="Sky" id="Sky_cul0m"]
sky_material = SubResource("ProceduralSkyMaterial_k065u")

[sub_resource type="Environment" id="Environment_02ojy"]
background_mode = 2
sky = SubResource("Sky_cul0m")
ambient_light_color = Color(0.921569, 0.909804, 0.866667, 1)
tonemap_exposure = 0.75
ssao_enabled = true
ssil_enabled = true
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(0.929412, 0.87451, 0.890196, 1)
volumetric_fog_emission_energy = 0.0
volumetric_fog_anisotropy = 0.4
volumetric_fog_ambient_inject = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_71l8q"]
size = Vector3(3, 3, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_58p6p"]
size = Vector3(3, 3, 4)

[node name="Main" type="Node"]
script = ExtResource("1_aodvc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_02ojy")

[node name="Scene" type="Node3D" parent="."]

[node name="Cameras" type="Node3D" parent="Scene"]

[node name="Camera_1" type="Camera3D" parent="Scene/Cameras"]
transform = Transform3D(-1, 5.07667e-08, -7.11723e-08, 0, 0.814116, 0.580703, 8.74228e-08, 0.580703, -0.814116, 0, 2.5, 0)

[node name="Camera_2" type="Camera3D" parent="Scene/Cameras"]
transform = Transform3D(-4.37114e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, 3.09086e-08, -3.09086e-08, 1.55, 2.8, -1.5)

[node name="Laure" parent="Scene" instance=ExtResource("2_4syor")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 3.5)

[node name="Environment" parent="Scene" instance=ExtResource("3_a4lbk")]

[node name="Trigger_1" type="Area3D" parent="Scene/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 3)

[node name="Trigger_Box" type="CollisionShape3D" parent="Scene/Environment/Trigger_1"]
shape = SubResource("BoxShape3D_71l8q")

[node name="Trigger_2" type="Area3D" parent="Scene/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1)

[node name="Trigger_Box" type="CollisionShape3D" parent="Scene/Environment/Trigger_2"]
shape = SubResource("BoxShape3D_58p6p")

[connection signal="area_entered" from="Scene/Environment/Trigger_1" to="." method="_on_trigger_1_area_entered"]
[connection signal="body_entered" from="Scene/Environment/Trigger_1" to="." method="_on_trigger_1_body_entered"]
[connection signal="body_exited" from="Scene/Environment/Trigger_1" to="." method="_on_trigger_1_body_exited"]
[connection signal="area_entered" from="Scene/Environment/Trigger_2" to="." method="_on_trigger_2_area_entered"]
[connection signal="body_entered" from="Scene/Environment/Trigger_2" to="." method="_on_trigger_2_body_entered"]
[connection signal="body_exited" from="Scene/Environment/Trigger_2" to="." method="_on_trigger_2_body_exited"]
